# simpleClock

./: CMakeLists.txt  README.md
include/: clock.h
src/: clock.c  main.c
